better documentation